--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,14 @@ addons:
 
 jobs:
     include:
-      stage: test
+      - stage: test
         script:
         - pip3 install poetry
         - export PATH=$PATH:/build/.local/bin
         - poetry install --no-dev
         - poetry run pip install pytest
         - poetry run pytest
-      stage: deploy
+      - stage: deploy
         script:
         - pip3 install poetry
         - export PATH=$PATH:/build/.local/bin
@@ -29,7 +29,7 @@ jobs:
         - poetry config pypi-token.testpypi $PYPITEST_TOKEN
         - poetry build
         - poetry publish -r testpypi
-      stage: pages
+      - stage: pages
         script:
         - pip3 install poetry
         - export PATH=$PATH:/build/.local/bin
