--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
         update: true
         packages:
             - python3-pip
+            - python3-setuptools
             - python3-venv
             - libenchant1c2a
             - pandoc
