--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,18 @@
-os: linux
-dist:
-    - bionic
+language: python
+python:
+  - "3.7"
+  - "3.8"
 
-addons:
-    apt:
-        update: true
-        packages:
-            - python3-pip
-            - python3-setuptools
-            - python3-venv
-            - libenchant1c2a
-            - pandoc
+install:
+  pip install -r requirements.txt
 
 jobs:
     include:
       - stage: test
         script:
-        - pip3 install poetry
-        - export PATH=$PATH:/build/.local/bin
-        - poetry install --no-dev
-        - poetry run pip install pytest
-        - poetry run pytest
-      - stage: deploy
-        script:
-        - pip3 install poetry
-        - export PATH=$PATH:/build/.local/bin
-        - rm -rf dist
-        - poetry config repositories.testpypi https://test.pypi.org/legacy/
-        - poetry config pypi-token.testpypi $PYPITEST_TOKEN
-        - poetry build
-        - poetry publish -r testpypi
+        - pytest 
       - stage: pages
         script:
-        - pip3 install poetry
-        - export PATH=$PATH:/build/.local/bin
-        - poetry install
         - cd docs && make html
         - mv build/html ../public
 
