--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,4 @@ jobs:
         run: |
           pip install pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          python setup.py install
+          pip install --user .
