--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,17 @@ name: leia-python-package
 on: push
 
 jobs:
+  distro_package:
+    runs-on: ubuntu-latest
+    steps:
+      - name: test distro package
+      # Install dependencies and test
+      - name: tests
+        shell: bash
+        run: |
+          sudo apt install smartleia;
+          sudo apt install vsmartcard-vpcd vsmartcard-vpicc;
+          python -c "import smartleia";
   local_python_package:
     runs-on: ubuntu-latest
     strategy:
@@ -22,8 +33,8 @@ jobs:
       - name: tests
         shell: bash
         run: |
-          pip install pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install --user .
+          pip install pytest;
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi;
+          pip install --user .;
           # Try to import the installed package
-          python -c "import smartleia"
+          python -c "import smartleia";
