--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,5 @@ jobs:
           pip install --user .;
           # Try to import the installed package
           python -c "import smartleia";
+          # Try to launch it
+          python -m smartleia || if [ $? -eq 42 ]; then echo "success"; else exit 1; fi
